crates/symbolicator-service/tests/integration/snapshots/integration__symbolication__nuget_file.snap
---
source: crates/symbolicator-service/tests/integration/symbolication.rs
assertion_line: 313
expression: response.unwrap()
---
stacktraces:
  - frames:
      - status: symbolicated
        original_index: 0
        addr_mode: "rel:0"
        instruction_addr: "0x21"
        function_id: "0xc"
        package: "./TimeZoneConverter.dll"
        lang: csharp
        filename: TZConvert.cs
        abs_path: /_/src/TimeZoneConverter/TZConvert.cs
        lineno: 115
modules:
  - debug_status: found
    features:
      has_debug_info: true
      has_unwind_info: false
      has_symbols: false
      has_sources: true
    arch: unknown
    type: pe_dotnet
    code_id: efc9a199e000
    code_file: "./TimeZoneConverter.dll"
    debug_id: 4e2ca887-825e-46f3-968f-25b41ae1b5f3-9e6d3fcc
    debug_file: "./TimeZoneConverter.pdb"
    debug_checksum: "SHA256:87a82c4e5e82f386968f25b41ae1b5f3cc3f6d9e79cfb4464f8240400fc47dcd"
    image_addr: "0x0"
    candidates:
      - source: nuget
        location: "https://symbols.nuget.org/download/symbols/TimeZoneConverter.pdb/4E2CA887825E46F3968F25B41AE1B5F3ffffffff/TimeZoneConverter.pdb"
        download:
          status: ok
          features:
            has_debug_info: true
            has_unwind_info: false
            has_symbols: false
            has_sources: true
        debug:
          status: ok

